@@ -204,3 +204,5 @@ Srinvas (@kidambisrinivas) for testing, bug reporting and fixing
 juair10 for corrections and testing
 
 CHORNY for CPAN and cpanfile packaging corrections
+
+Iñigo Tejedor for service endpoint resolution based on rules
